--- a/client/src/components/Customer-components/Ridepage-components/Map/map.css
+++ b/client/src/components/Customer-components/Ridepage-components/Map/map.css
@@ -10,6 +10,7 @@
 	min-height: 80vh;
 	min-width: 90%;
 	right: 5%;
+	border-radius: 1rem;
 	border: 5rem solid grey;
 }
 .leaflet-touch .leaflet-control-geocoder {
